update gulp file

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,5 +5,8 @@
 @import 'base/_reset';
 @import 'utils/_settings';
 
+//Libs
+//@import 'libs/fancybox';
+
 @import './components/header';
 @import './components/footer';
