--- a/src/scss/utils/_vars.scss
+++ b/src/scss/utils/_vars.scss
@@ -39,7 +39,7 @@
 	--secondary-hover: #2b6dd1;
 
 	// Alerts
-	--success: #1dc88a;
+	/*--success: #1dc88a;
 	--success-hover: #0ea46e;
 
 	--warning: #f1d857;
@@ -49,7 +49,7 @@
 	--danger-hover: #dd3333;
 
 	--disabled: #a0aec0;
-	--separator-color: #dedede;
+	--separator-color: #dedede;*/
 
 	// Additional Colors
 }
